--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "5.1.3",
     "font-awesome": "4.7.0",
     "lodash": "4.17.21",
     "node-sass": "9.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "2.1.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-smooth-dnd": "^0.11.1",
+    "uuid": "8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
