--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.1.3",
     "font-awesome": "4.7.0",
+    "html-react-parser": "^1.4.8",
     "lodash": "4.17.21",
     "node-sass": "9.0.0",
     "react": "^18.2.0",
