--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "2.1.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.0",
     "react-smooth-dnd": "^0.11.1",
     "uuid": "8.3.2",
     "web-vitals": "^2.1.4"
